# Events

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env  Dockerfile  db.sqlite3  requirements.txt
backend/api_v1/: serializers.py  urls.py  utils.py  views.py
backend/backend/: asgi.py  settings.py  urls.py
backend/chat/: consumers.py  urls.py  utils.py
backend/chat/migrations/: 0001_initial.py
backend/events/: admin.py  models.py  validators.py
backend/events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_organizations.py  0004_alter_event_organizations.py  0005_alter_event_organizations.py  0006_alter_event_organizations.py
backend/organizations/: admin.py  apps.py  models.py
backend/organizations/migrations/: 0001_initial.py  0002_initial.py  0003_alter_membership_options_and_more.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_options.py
nginx/: Dockerfile  default.conf
